# advent-of-code-2023

./: .gitignore  README.md
python-aoc-2023/: .gitignore  newday.sh  pyproject.toml
python-aoc-2023/aoc/: models.py  run.py  template.py  template.txt  test_template.txt
python-aoc-2023/aoc/solutions/: config.py  helpers.py
python-aoc-2023/aoc/solutions/day01/: efficient.py  quickdirty.py  v2.py
python-aoc-2023/aoc/solutions/day02/: first.py
python-aoc-2023/aoc/solutions/day03/: alpha.py
python-aoc-2023/aoc/solutions/day04/: alpha.py
python-aoc-2023/aoc/solutions/day05/: alpha.py
python-aoc-2023/aoc/solutions/day06/: alpha.py
python-aoc-2023/aoc/solutions/day07/: alpha.py
python-aoc-2023/aoc/solutions/day08/: alpha.py
python-aoc-2023/aoc/solutions/day09/: alpha.py
python-aoc-2023/aoc/solutions/day10/: alpha.py  beta.py
python-aoc-2023/aoc/solutions/day11/: alpha.py
python-aoc-2023/aoc/solutions/day12/: alpha.py
python-aoc-2023/aoc/solutions/day14/: alpha.py
python-aoc-2023/aoc/solutions/day15/: alpha.py
python-aoc-2023/aoc/tests/: test_models.py
python-aoc-2023/aoc/tests/day01/: conftest.py  test_efficient.py  test_v2.py
python-aoc-2023/aoc/tests/day02/: conftest.py  test_first.py
python-aoc-2023/aoc/tests/day03/: conftest.py  test_alpha.py
python-aoc-2023/aoc/tests/day04/: test_alpha.py
python-aoc-2023/aoc/tests/day05/: test_alpha.py
python-aoc-2023/aoc/tests/day06/: test_alpha.py
python-aoc-2023/aoc/tests/day07/: test_alpha.py
python-aoc-2023/aoc/tests/day08/: test_alpha.py
python-aoc-2023/aoc/tests/day09/: test_alpha.py
(+23 files in other folders)
