[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["Riley John Gibbs <rileyjohngibbs@gmail.com>"]
readme = "README.md"
packages = [{include = "aoc"}]

[tool.poetry.dependencies]
python = "3.12"
pydantic = "^2.5.2"
pytest = "^7.4.3"
mypy = "^1.7.1"
pydantic-settings = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
